tests/snapshots/snapshot_tests__array_init_addvar5.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_addvar5.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z 18839) Z) 18839)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!15 Z 18839) Z) 18839)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!15 Z 18839) Z) (Read-Int-Int Array-Int-Int!val!15 Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z 18839) Z) (Read-Int-Int a Z))",
    ],
}
