tests/snapshots/snapshot_tests__array_init_addvar7.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_addvar7.vmt",
    status: Good,
    used_instantiations: [],
}
